dhall/tests/type-inference/failure/unit/EquivalenceNotSameType.txt
Type error: error: EquivalenceTypeMismatch
 --> <current file>:1:1
  |
1 | 1 === False
  | ^^^^^^^^^^^ EquivalenceTypeMismatch
  |
